force-app/main/default/objects/Case/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <label>Additional information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>