force-app/main/default/objects/Case/fields/Addresse_RDV__c.field-meta.xml
<CustomField>
    <fullName>Addresse_RDV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addresse RDV</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>