force-app/main/default/objects/Case/fields/Asset_Adress__c.field-meta.xml
<CustomField>
    <fullName>Asset_Adress__c</fullName>
    <formula>Asset.Address__r.Complete_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Adress</label>
    <type>Text</type>
</CustomField>