force-app/main/default/objects/Case/fields/Asset_install_date_less_than_1_year__c.field-meta.xml
<CustomField>
    <fullName>Asset_install_date_less_than_1_year__c</fullName>
    <formula>AND ( (TODAY() - Asset.InstallDate &lt;= 365) , NOT( ISNULL(Asset.InstallDate)) , NOT(ISBLANK(Asset.InstallDate) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset install date less than 1 year</label>
    <type>Checkbox</type>
</CustomField>