force-app/main/default/objects/Case/fields/Asset_install_date_more_than_1_year_tech__c.field-meta.xml
<CustomField>
    <fullName>Asset_install_date_more_than_1_year_tech__c</fullName>
    <formula>( TODAY() - Asset.InstallDate ) &gt; 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset install date more than 1 year</label>
    <type>Checkbox</type>
</CustomField>