force-app/main/default/objects/Case/fields/Asset_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Purchase_Date__c</fullName>
    <formula>Asset.PurchaseDate</formula>
    <label>Asset Purchase Date</label>
    <type>Date</type>
</CustomField>