force-app/main/default/objects/Case/fields/Choice_of_store__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choice of store</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases (Choice of store)</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>