force-app/main/default/objects/Case/fields/Choice_of_store_Name__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_store_Name__c</fullName>
    <formula>Choice_of_store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Choice of store Name</label>
    <type>Text</type>
</CustomField>