force-app/main/default/objects/Case/fields/Choice_of_store_pl__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_store_pl__c</fullName>
    <label>Choice of store</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blainville</fullName>
            </value>
            <value>
                <fullName>Boucherville</fullName>
            </value>
            <value>
                <fullName>Brossard</fullName>
            </value>
            <value>
                <fullName>Gatineau</fullName>
            </value>
            <value>
                <fullName>Laval</fullName>
            </value>
            <value>
                <fullName>Mascouche</fullName>
            </value>
            <value>
                <fullName>Pointe-Claire</fullName>
            </value>
            <value>
                <fullName>Québec et Lévis</fullName>
            </value>
            <value>
                <fullName>Ventes web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>