force-app/main/default/objects/Case/fields/Choice_of_store_Sage_Id__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_store_Sage_Id__c</fullName>
    <formula>Choice_of_store__r.Sage_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Choice of store Sage Id</label>
    <type>Text</type>
</CustomField>