force-app/main/default/objects/Case/fields/Contract_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Text__c</fullName>
    <label>Contract Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>