force-app/main/default/objects/Case/fields/Contract_WTG__c.field-meta.xml
<CustomField>
    <fullName>Contract_WTG__c</fullName>
    <formula>TEXT(Contract_Number__r.ContractType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract WTG</label>
    <type>Text</type>
</CustomField>