force-app/main/default/objects/Case/fields/Customer_Access_Link_EN__c.field-meta.xml
<CustomField>
    <fullName>Customer_Access_Link_EN__c</fullName>
    <formula>SUBSTITUTE(LEFT($Api.Partner_Server_URL_620, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_620) - 1), &apos;my.salesforce.com&apos;, &apos;my.site.com&apos;) &amp; &apos;/s/login/?language=en_US&amp;startURL=%2Fs%2F%3Flanguage%3Den_US%26t%3D1737977531681&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Access Link EN</label>
    <type>Text</type>
</CustomField>