force-app/main/default/objects/Case/fields/Date_of_purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_purchase__c</fullName>
    <label>Date of purchase</label>
    <type>Date</type>
</CustomField>