force-app/main/default/objects/Case/fields/Date_RDV__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV__c</fullName>
    <label>Date RDV</label>
    <type>Date</type>
</CustomField>