force-app/main/default/objects/Case/fields/Date_RDV_deprecated__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV_deprecated__c</fullName>
    <label>Date RDV (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>