force-app/main/default/objects/Case/fields/Department_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Department_in_Charge__c</fullName>
    <label>Department in Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>