force-app/main/default/objects/Case/fields/Has_asset_tech__c.field-meta.xml
<CustomField>
    <fullName>Has_asset_tech__c</fullName>
    <formula>NOT(OR (ISNULL( Asset.Id) , ISBLANK( Asset.Id)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has asset</label>
    <type>Checkbox</type>
</CustomField>