force-app/main/default/objects/Case/fields/Has_asset_with_product_tech__c.field-meta.xml
<CustomField>
    <fullName>Has_asset_with_product_tech__c</fullName>
    <formula>NOT( OR(ISBLANK(Asset.Product2.Id ), ISNULL(Asset.Product2.Id )))</formula>
    <label>Has asset with product</label>
    <type>Checkbox</type>
</CustomField>