force-app/main/default/objects/Case/fields/Has_Harmony_product_tech__c.field-meta.xml
<CustomField>
    <fullName>Has_Harmony_product_tech__c</fullName>
    <formula>CONTAINS( Asset.Product2.Name , &apos;HARMONY&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Harmony product</label>
    <type>Checkbox</type>
</CustomField>