force-app/main/default/objects/Case/fields/Installation_date__c.field-meta.xml
<CustomField>
    <fullName>Installation_date__c</fullName>
    <label>Installation date</label>
    <type>Date</type>
</CustomField>