force-app/main/default/objects/Case/fields/Internal_Technician_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Technician_Comments__c</fullName>
    <inlineHelpText>Technician comments for the client (visible on the service report).</inlineHelpText>
    <label>Technician Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>