force-app/main/default/objects/Case/fields/Labor_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Labor_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the labor still under warranty?</inlineHelpText>
    <label>Labor Warranty</label>
    <type>Checkbox</type>
</CustomField>