force-app/main/default/objects/Case/fields/LastModified_Custom__c.field-meta.xml
<CustomField>
    <fullName>LastModified_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trévi Modification</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>