force-app/main/default/objects/Case/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <label>Main Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-ground pool</fullName>
            </value>
            <value>
                <fullName>Semi-inground pool</fullName>
            </value>
            <value>
                <fullName>Above-ground pool</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Carport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>