force-app/main/default/objects/Case/fields/New_Request__c.field-meta.xml
<CustomField>
    <fullName>New_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this request new?</inlineHelpText>
    <label>New Request?</label>
    <type>Checkbox</type>
</CustomField>