force-app/main/default/objects/Case/fields/Pieces_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Pieces_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the pieces still under warranty?</inlineHelpText>
    <label>Pieces Warranty</label>
    <type>Checkbox</type>
</CustomField>