force-app/main/default/objects/Case/fields/Previous_customer_information__c.field-meta.xml
<CustomField>
    <fullName>Previous_customer_information__c</fullName>
    <label>Previous customer information</label>
    <length>65000</length>
    <type>LongTextArea</type>
</CustomField>