force-app/main/default/objects/Case/fields/Product_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the product still under warranty?</inlineHelpText>
    <label>Product Warranty</label>
    <type>Checkbox</type>
</CustomField>