force-app/main/default/objects/Case/fields/profit_center__c.field-meta.xml
<CustomField>
    <fullName>profit_center__c</fullName>
    <formula>Contract_Number__r.Profit_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>profit center</label>
    <type>Text</type>
</CustomField>