force-app/main/default/objects/Case/fields/QR_code__c.field-meta.xml
<CustomField>
    <fullName>QR_code__c</fullName>
    <formula>IMAGE(
    &quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot; &amp; 
    LEFT($Api.Enterprise_Server_URL_110, FIND(&quot;/services/&quot;, $Api.Enterprise_Server_URL_110) - 1) &amp; 
    &quot;/lightning/r/Case/&quot; &amp; Id &amp;&quot;/view&quot;, 
    &quot;Scan QR code to open Case&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>