force-app/main/default/objects/Case/fields/Reason_to_cancel__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_cancel__c</fullName>
    <label>Reason to cancel</label>
    <type>TextArea</type>
</CustomField>