force-app/main/default/objects/Case/fields/Reason_to_proceed__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_proceed__c</fullName>
    <label>Reason to proceed</label>
    <type>TextArea</type>
</CustomField>