force-app/main/default/objects/Case/fields/Recent_Service_Call__c.field-meta.xml
<CustomField>
    <fullName>Recent_Service_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select &apos;Yes&apos; if the call is related to a service performed in the last 30 days; otherwise, select &apos;No&apos;.</inlineHelpText>
    <label>Recent Service Call?</label>
    <type>Checkbox</type>
</CustomField>