force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Montréal and Gatineau Regions</fullName>
            </value>
            <value>
                <fullName>Quebec Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>