force-app/main/default/objects/Case/fields/Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_ID__c</fullName>
    <formula>Account.Sage_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sage ID</label>
    <type>Text</type>
</CustomField>