force-app/main/default/objects/Case/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>If applicable. Enter Product Serial number.</inlineHelpText>
    <label>Serial Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>