force-app/main/default/objects/Case/fields/Service_Call_Article__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champ sert à garder trace de l&apos;article qui a servi à lancer l&apos;appel de service qui a créé la case depuis le portail</description>
    <label>Service Call Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>