force-app/main/default/objects/Case/fields/Service_call_number__c.field-meta.xml
<CustomField>
    <fullName>Service_call_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service call number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>