force-app/main/default/objects/Case/fields/ServiceAppointment_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointment_Scheduled_Start__c</fullName>
    <label>ServiceAppointment Scheduled Start</label>
    <type>DateTime</type>
</CustomField>