force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Réparation chauffe-eau Spa</fullName>
            </value>
            <value>
                <fullName>Réparation contrôleur (Pack) Spa</fullName>
            </value>
            <value>
                <fullName>Réparation pompe Spa</fullName>
            </value>
            <value>
                <fullName>Réparation tuyauterie Spa</fullName>
            </value>
            <value>
                <fullName>Réparation clavier Spa</fullName>
            </value>
            <value>
                <fullName>Réparation pompe balnéo Spa</fullName>
            </value>
            <value>
                <fullName>Réparation lumière Spa</fullName>
            </value>
            <value>
                <fullName>Réparation audio Spa</fullName>
            </value>
            <value>
                <fullName>Réparation composant rouillé Spa</fullName>
            </value>
            <value>
                <fullName>Estimé assurance Spa</fullName>
            </value>
            <value>
                <fullName>Réparation In.Touch Spa</fullName>
            </value>
            <value>
                <fullName>Réparation corps de jet Spa</fullName>
            </value>
            <value>
                <fullName>Subtype 1</fullName>
                <isActive>false</isActive>
                <label>Subtype 1</label>
            </value>
            <value>
                <fullName>Subtype 2</fullName>
                <isActive>false</isActive>
                <label>Subtype 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>