force-app/main/default/objects/Case/fields/Technician_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technician_Comments__c</fullName>
    <inlineHelpText>Internal technician comments (notes for the office only).</inlineHelpText>
    <label>Technician Comments (Client)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>