force-app/main/default/objects/Case/fields/Tips_and_Advice_Link_FR__c.field-meta.xml
<CustomField>
    <fullName>Tips_and_Advice_Link_FR__c</fullName>
    <formula>&apos;https://www.trevi.com/fr/trucs-et-conseils&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tips and Advice Link FR</label>
    <type>Text</type>
</CustomField>