force-app/main/default/objects/Case/fields/Type_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPA</fullName>
                <label>Produit SPA</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>Produit SC</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Produit CR</label>
            </value>
            <value>
                <fullName>Above ground Pool</fullName>
                <isActive>false</isActive>
                <label>Above ground Pool</label>
            </value>
            <value>
                <fullName>Accesories</fullName>
                <isActive>false</isActive>
                <label>Accesories</label>
            </value>
            <value>
                <fullName>Furniture and Gazebos</fullName>
                <isActive>false</isActive>
                <label>Furniture and Gazebos</label>
            </value>
            <value>
                <fullName>Inground Pool</fullName>
                <isActive>false</isActive>
                <label>Inground Pool</label>
            </value>
            <value>
                <fullName>Pool</fullName>
                <isActive>false</isActive>
                <label>Pool</label>
            </value>
            <value>
                <fullName>Semi-inground Pool</fullName>
                <isActive>false</isActive>
                <label>Semi-inground Pool</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>