force-app/main/default/objects/Case/fields/Web_Language__c.field-meta.xml
<CustomField>
    <fullName>Web_Language__c</fullName>
    <label>Web Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>