force-app/main/default/objects/Case/fields/WOLI_description_status__c.field-meta.xml
<CustomField>
    <fullName>WOLI_description_status__c</fullName>
    <label>WOLI description status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Your service has been assigned to a team, they will contact you.</fullName>
            </value>
            <value>
                <fullName>Your service has been completed</fullName>
            </value>
            <value>
                <fullName>The technician will contact you to tell you the recommended work.</fullName>
            </value>
            <value>
                <fullName>You have received a notification to make a payment</fullName>
            </value>
            <value>
                <fullName>The work could not be completed, you will be contacted for a next appointment.</fullName>
            </value>
            <value>
                <fullName>Your service is confirmed</fullName>
            </value>
            <value>
                <fullName>Your piece to be repaired has been deposited in the store</fullName>
            </value>
            <value>
                <fullName>The Trevi team is on its way to your home</fullName>
            </value>
            <value>
                <fullName>Your piece is in transit to the repair shop</fullName>
            </value>
            <value>
                <fullName>Your part is in transit to the store. Please wait to be contacted before coming in.</fullName>
            </value>
            <value>
                <fullName>You must complete the payment in order for Trevi to honor the appointment</fullName>
            </value>
            <value>
                <fullName>Your piece is in transit to the store. Please wait to be contacted before coming in.</fullName>
            </value>
            <value>
                <fullName>Your piece is ready to be picked up in store</fullName>
            </value>
            <value>
                <fullName>Your piece is being evaluated</fullName>
            </value>
            <value>
                <fullName>Your service is awaiting planning by our teams. You will be contacted to confirm the fixed day.</fullName>
            </value>
            <value>
                <fullName>You have received a notification. We are waiting for your confirmation.</fullName>
            </value>
            <value>
                <fullName>Your piece is waiting for materials to complete the work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>