force-app/main/default/objects/Case/fields/WOLI_description_status_obsolete__c.field-meta.xml
<CustomField>
    <fullName>WOLI_description_status_obsolete__c</fullName>
    <label>WOLI description status obsolete</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>