force-app/main/default/objects/Case/fields/WOLI_Earliest_start_date__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Earliest_start_date__c</fullName>
    <label>WOLI Earliest start date</label>
    <type>DateTime</type>
</CustomField>