force-app/main/default/objects/Case/fields/Work_Type_Sage_Id_tech__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Sage_Id_tech__c</fullName>
    <formula>Work_Type__r.Sage_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type Sage Id tech</label>
    <type>Text</type>
</CustomField>