force-app/main/default/objects/Case/recordTypes/Default_Case.recordType-meta.xml
<RecordType>
    <fullName>Default_Case</fullName>
    <active>true</active>
    <businessProcess>Default Process</businessProcess>
    <label>Default Case</label>
</RecordType>