force-app/main/default/objects/Case/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <businessProcess>Without RDV Process</businessProcess>
    <description>This record type is to manage cases that originate from customer service interactions that only managed by the office and that depending on the need, will require a visit in the future. It includes fields and processes to handle these types of request.</description>
    <label>General</label>
</RecordType>