force-app/main/default/objects/Case/recordTypes/Opening_and_Winterizing.recordType-meta.xml
<RecordType>
    <fullName>Opening_and_Winterizing</fullName>
    <active>true</active>
    <businessProcess>Default Process</businessProcess>
    <description>This record type is designed to manage cases that originate from customers that purchase pool/ spa opening and winterizing services. It includes fields and processes tailored to efficiently handle and track these specific types of requests.</description>
    <label>Opening and Winterizing</label>
</RecordType>