force-app/main/default/objects/Case/recordTypes/Pump_Repair.recordType-meta.xml
<RecordType>
    <fullName>Pump_Repair</fullName>
    <active>true</active>
    <businessProcess>Without RDV Process</businessProcess>
    <description>This record type is designed to manage cases that originate from customers that request a pump repair service. It includes fields and processes tailored to efficiently handle and track these specific types of requests.</description>
    <label>In-store repair</label>
</RecordType>