force-app/main/default/objects/Case/recordTypes/Service_Call.recordType-meta.xml
<RecordType>
    <fullName>Service_Call</fullName>
    <active>true</active>
    <businessProcess>Default Process</businessProcess>
    <description>This record type is designed to manage cases that originate from customer service interactions that require further technical support. It includes fields and processes tailored to efficiently handle and track these specific types of request.</description>
    <label>Service Call</label>
</RecordType>