force-app/main/default/objects/Case/listViews/AB_Mtl_Case.listView-meta.xml
<ListView>
    <fullName>AB_Mtl_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AB Mtl</label>
    <queue>AB_Mtl</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>