force-app/main/default/objects/Case/listViews/AB_QC_Case.listView-meta.xml
<ListView>
    <fullName>AB_QC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AB QC</label>
    <queue>AB_QC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>