force-app/main/default/objects/Case/listViews/Above_ground_pool_MTL_Case.listView-meta.xml
<ListView>
    <fullName>Above_ground_pool_MTL_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Above-ground pool MTL</label>
    <queue>Above_ground_pool_MTL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>