force-app/main/default/objects/Case/listViews/Above_ground_pool_QC_Case.listView-meta.xml
<ListView>
    <fullName>Above_ground_pool_QC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Above-ground pool QC</label>
    <queue>Above_ground_pool_QC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>