force-app/main/default/objects/Case/listViews/AC_AB_Qc_Case.listView-meta.xml
<ListView>
    <fullName>AC_AB_Qc_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AC/AB Qc</label>
    <queue>AC_AB_Qc</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>