force-app/main/default/objects/Case/listViews/AC_RB_Mtl_Case.listView-meta.xml
<ListView>
    <fullName>AC_RB_Mtl_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AC/RB Mtl</label>
    <queue>AC_RB_Mtl</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>