force-app/main/default/objects/Case/listViews/AC_RB_QC_Case.listView-meta.xml
<ListView>
    <fullName>AC_RB_QC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AC/RB QC</label>
    <queue>AC_RB_QC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>