force-app/main/default/objects/Case/listViews/Accessories_MTL_Case.listView-meta.xml
<ListView>
    <fullName>Accessories_MTL_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Accessories MTL</label>
    <queue>Accessories_MTL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>