force-app/main/default/objects/Case/listViews/Accessories_QC_Case.listView-meta.xml
<ListView>
    <fullName>Accessories_QC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Accessories QC</label>
    <queue>Accessories_QC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>