force-app/main/default/objects/Case/listViews/Blainville_Case.listView-meta.xml
<ListView>
    <fullName>Blainville_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Magasin Blainville</label>
    <queue>Blainville</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>