force-app/main/default/objects/Case/listViews/Boucherville_Case.listView-meta.xml
<ListView>
    <fullName>Boucherville_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Magasin Boucherville</label>
    <queue>Boucherville</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>