force-app/main/default/objects/Case/listViews/Brossard_Case.listView-meta.xml
<ListView>
    <fullName>Brossard_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Magasin Brossard</label>
    <queue>Brossard</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>